# NinetailsX

./: .gitignore  CMakeLists.txt  README.md  build.ps1  clean.ps1  config_cmake.ps1  debug.ps1  run.ps1
assets/: note.txt
source/: CMakeLists.txt
source/nxcore/: CMakeLists.txt  core.h  engine.cpp  engine.h  globals.h  helpers.h  input.h  math.h  memory.h  primitives.h  renderer.h  resources.h  string.h
source/nxcore/engine/: engine.cpp  game.cpp  game.h  globals.h
source/nxcore/math/: trig.h  vector.h
source/nxcore/renderer/: colors.h  software.h
source/nxcore/resource/: dibitmap.h
source/platform/linux/: CMakeLists.txt  main.cpp
source/platform/win32/: CMakeLists.txt  display.h  main.cpp  main.h
